--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -10,6 +10,7 @@
 
 % Dados da orientacao
 \orientador{Prof. Dr. Luiz Augusto Fontes Laranjeira}
+\coorientador{(quando houver, Titulação Acadêmica e Nome do Orientador)}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
