--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -1,16 +1,15 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Gabriela Matias Navarro}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
 \titulo{Título: Subtítulo do Trabalho}
-\data{2013}
+\data{2014}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
 
 % Dados da orientacao
-\orientador{(Titulação Acadêmica e Nome do Orientador)}
-\coorientador{(quando houver, Titulação Acadêmica e Nome do Orientador)}
+\orientador{Prof. Dr. Luiz Augusto Fontes Laranjeira}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
