Contextualization of cryptography.

--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -1,6 +1,16 @@
 \chapter{Criptografia}
 \label{cryptograhy}
 
+%
+A necessidade de manter informações em sigilo impulsionou a evolução dos estudos da criptografia. O exato início da criptografia é incerto, mas na Renascença,assim como outros em muitos outros campos, o estudo da criptografia começou a seu aprofundado e suas técnicas armazenadas e ensinadas. ~\cite{donald-davies}
+
+%
+Uma das primeiras formas de criptografia utilizada foi a substituição. A substituição primeiramente era feita de forma fixa, ou seja, era feita uma tabela fixa em que as letras do alfabeto eram trocadas por outras letras. Leon Battista Alberti introduziu uma maneira diferente de fazer a substituição, criando o algoritmo \textit{polyalphabetic substitution}. O princípio desse algoritmo era a criação de várias tabelas de substituição e a utilização de uma chave para definir a ordem que cada tabela seria usada para cifrar cada letra do texto em claro. O conjunto de tabelas de substituição é chamado de \textit{Vigenere tableau}
+
+%
+Durante a II Guerra Mundial a criação de novas máquinas foi incentivada e com isso máquinas para manter informações em sigilo foram criadas. Duas máquinas dessa época merecem destaque, o \textit{Enigma} e o 	\textit{SZ40}. Após a guerra, a publicação do algoritmo \textit{DES} serviu de incentivo para cientistas do mundo aprofundarem suas pesquisas em novos algoritmos. Nos dias de hoje existem duas linhas de pensamento sobre criptografia, a criptografia com chave simétrica e assimétrica. 
+
+
 \section{Criptografia Assimétrica}
 \label{assymmetric-cryptography}
 
