Contextualization of symmetric cipher

--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -50,6 +50,10 @@ M = C $^ d$ mod n. Sendo que C é o texto criptografado, M a mensagem em claro e
 \section{Criptografia Simétrica}
 \label{symmetric-cryptography}
 
+A criptografia simétrica utiliza a mesma chave para criptografar e descriptografar uma mensagem. É objeto de estudo para muitos cientistas e existem muitos algoritmos que ainda são utilizados pelo mundo. 
+
+Uma das vantagens em relação a criptografia assimétrica é que o custo para ser utilizada não é tão elevado e sua possibilidade de uso é maior, visto que a criptografia assimétrica tem suas limitações quanto ao tamanho da mensagem e o fato de se ter que criar duas chaves para cada um dos interessados na mensagem. O s algoritmos são divididos em: cifra de bloco e de fluxo.
+
 \subsection{Cifra de Bloco}
 \label{block-cipher}
 
