Contextualization of stream cipher

--- a/capitulos/2-criptografia.tex
+++ b/capitulos/2-criptografia.tex
@@ -69,10 +69,11 @@ A maior fraqueza do algoritmo \textit{DES} é o tamanho da chave que é utilizad
 \item[CTR] utiliza como entrada para a função criptográfica um contador que é acrescentado de um em um. 
 \end{description}
 
-
-
 \subsection{Cifra de Fluxo}
 \label{stream-cipher}
+
+Os algoritmos que utilizam a cifra de fluxo o fazem de bit a bit ou byte a byte. Uma das vantagens da cifra de fluxo em relação a cifra de bloco é desempenho superior e por esse motivo é muito utilizado em sistemas de redes, como \textit{bluetooth}, \textit{SSL} e outros. Outra vantagem é a possibilidade de transformar uma cifra de bloco em cifra de fluxo, para isso basta definir o tamanho do bloco para ser bit ou byte. Alguns dos algoritmos de fluxo mais populares que hoje cobrem mais de 80$\%$ do mundo na telecomunicação e \textit{cyber space} são: A5/1, A5/2, E0 e RC4. ~\cite{pegar-citação}
+
 
 \subsubsection{Algoritmo A5/1}
 \label{algorithm-a51}
