Algorithm proposition chapter

--- a/tcc.tex
+++ b/tcc.tex
@@ -30,6 +30,7 @@
 \input{capitulos/1-introducao}
 \input{capitulos/2-criptografia}
 \input{capitulos/3-prng}
+\input{capitulos/5-algoritmo}
 
 \bookmarksetup{startatroot} 
 
