--- a/tcc.tex
+++ b/tcc.tex
@@ -31,6 +31,7 @@
 \input{capitulos/2-criptografia}
 \input{capitulos/3-prng}
 \input{capitulos/5-algoritmo}
+\input{capitulos/6-conclusao}
 
 \bookmarksetup{startatroot} 
 
