Structural of the chapter

--- a/capitulos/3-prng.tex
+++ b/capitulos/3-prng.tex
@@ -1,2 +1,27 @@
 \chapter{Pseudo Random Number Generator}
 \label{pseudo-random-number-generator}
+
+% 
+A criptografia de fluxo utiliza de \textit{pseudo random number generator} como entrada para as suas operações. O fato de se utilizar um gerador pseudo aleatório vem da necessidade de que o receptor da mensagem precisa ter a capacidade de decifrar a mensagem, portanto o gerador tem uma função determinística para produção dos números e tanto o receptor quanto o remetente tem acesso.
+
+% 
+Falar um pouco do TRNG
+
+% 
+Falar um pouco sobre a \textbf{uniformidade} e \textbf{aleatoriedade}.
+
+%
+Falar um pouco sobre os testes do NIST para garantir as duas propriedades.
+
+
+Falar dos dois tipos de 	algoritmos para PRNG
+\begin{enumerate}
+\item linear congruential generators
+
+\end{enumerate}
+% 
+Falar dos principais geradores de números aleatórios
+\begin{enumerate}
+\item Blum blum shub
+\item
+\end{enumerate}
